...
                        .onFocusChanged {
                            nameHasFocus = it.isFocused
                            if (it.isFocused) {
                                collapse()
                            }
                        }
                        .testTag("recipe_edit_name"),
                    singleLine = true,
                    keyboardOptions = KeyboardOptions(KeyboardCapitalization.Sentences),
                    label = { Text(stringResource(id = R.string.recipe_edit_name)) },
                )
            }
        }
...
            AnimatedContent(
                targetState = showDescription,
                label = "Description animated content",
            ) {
                if (!it) {
                    TextButton(
                        modifier = Modifier.testTag("recipe_edit_description_button"),
                        onClick = { showDescription = !showDescription },
                    ) {
                        Icon(
                            modifier = Modifier.size(20.dp),
                            imageVector = Icons.Rounded.Add,
                            contentDescription = "",
...
                            .onFocusChanged { focusState ->
                                if (focusState.isFocused) {
                                    collapse()
                                }
                            }
                            .focusRequester(descriptionFocusRequester)
                            .testTag("recipe_edit_description"),
                        keyboardOptions = KeyboardOptions(KeyboardCapitalization.Sentences),
                        label = { Text(stringResource(id = R.string.recipe_edit_description)) },
                    )
                }
            }
        }
...
                                painterResource(id = R.drawable.ic_delete),
                                contentDescription = null,
                            )
                        }
                    }
                    FilledIconButton(
                        modifier = Modifier.testTag("recipe_edit_save"),
                        onClick = onSave,
                        enabled = canSave,
                    ) {
                        Icon(
                            painterResource(id = R.drawable.ic_save),
                            contentDescription = null,
...
